# BinarySymphony

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/binarysymphony/: __init__.py  audio_export.py  cli.py  core.py  gui.py  midi_export.py  visualization.py
tests/: test_batch.py  test_cli.py  test_core.py
